# nonebot-plugin-chatgpt-vision

./: .gitignore  LICENSE  README.md  mcp.yaml.exmples  pyproject.toml
nonebot_plugin_chatgpt_vision/: __init__.py  chat.py  config.py  dalle.py  group.py  human_like.py  misc.py  model.py  pic_sql.py  picsql.py  pool.py  qface.json  record.py  rule.py  userrd.py  utils.py
nonebot_plugin_chatgpt_vision/copywrite/: __init__.py  default.long.yaml  default.short.yaml  你说得对.yaml  给害了.yaml  鸣潮.yaml
nonebot_plugin_chatgpt_vision/fee/: userrd.py
nonebot_plugin_chatgpt_vision/plugin/: chat.py  dalle.py  misc.py
nonebot_plugin_chatgpt_vision/searcher/: __init__.py  duckduckgo.py  interface.py  scp.py
nonebot_plugin_chatgpt_vision/tools/: __init__.py  block.py  code.py  group.py  internet.py  mcp.py
