[tool.poetry]
name = "nonebot-plugin-chatgpt-vision"
version = "0.1.0"
description = ""
authors = ["Yan <1964649083@qq.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nonebot2 = "^2.3.0"
nonebot-adapter-onebot = "^2.4.3"
PyYAML = "^6.0.1"
openai = "^1.30.1"
dashscope = "^1.19.0"
tex2img = {git = "https://github.com/Yan-Zero/tex2img.git", rev = "main"}
pypandoc = "^1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
