[tool.poetry]
name = "nonebot-plugin-chatgpt-vision"
version = "1.0.2"
description = ""
authors = ["Yan <1964649083@qq.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nonebot2 = "^2.3.0"
nonebot-adapter-onebot = "^2.4.3"
PyYAML = "^6.0.1"
openai = "^1.30.1"
tex2img = { git = "https://github.com/Yan-Zero/tex2img.git", rev = "main" }
pypandoc = "^1.13"
# MCP 协议客户端（含 CLI 扩展）
mcp = { extras = ["cli"], version = "^1.14.0" }
async-tio = "^1.3.2"
fastmcp = "^2.12.3"
beautifulsoup4 = "^4.13.5"
lxml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
