[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [{ name = "Yan", email = "1964649083@qq.com" }]
license = { text = "Apache License 2.0" }
requires-python = "<4.0,>=3.11"
dependencies = [
    "nonebot2<3.0.0,>=2.4.0",
    "nonebot-adapter-onebot<3.0.0,>=2.4.3",
    "PyYAML<7.0.0,>=6.0.1",
    "openai<2.0.0,>=1.30.1",
    "pypandoc<2.0,>=1.13",
    "async-tio<2.0.0,>=1.3.2",
    "fastmcp<3.0.0,>=2.12.3",
    "beautifulsoup4<5.0.0,>=4.13.5",
    "lxml<7.0.0,>=6.0.1",
    "cairosvg<3.0.0,>=2.8.2",
    "aiohttp>=3.12.15",
    "trafilatura>=1.6.1",
    "httpx>=0.28.1",
]
name = "nonebot-plugin-chatgpt-vision"
version = "1.2.2"
description = ""
readme = "README.md"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
